Project3/terraform/security_groups.tf
resource "aws_security_group" "web_sg" {
  name        = "${var.project_name}-sg"
  description = "Allow web and SSH traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 4000
    to_port     = 4000
    protocol    = "tcp"
    cidr_blocks = ["65.92.152.43/32"]  
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]  
  }

  tags = {
    Name = "${var.project_name}-web-sg"
  }
}

resource "aws_security_group" "monitoring_sg" {
  name        = "${var.project_name}-monitoring-sg"
  description = "Allow traffic from web app"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port                = 9090
    to_port                  = 9090
    protocol                 = "tcp"
    source_security_group_id = aws_security_group.web_sg.id
    description              = "Allow Prometheus from web app"
  }


  ingress {
    from_port                = 5601
    to_port                  = 5601
    protocol                 = "tcp"
    source_security_group_id = aws_security_group.web_sg.id
    description              = "Allow Kibana from web app"
  }


  ingress {
    from_port                = 3000
    to_port                  = 3000
    protocol                 = "tcp"
    source_security_group_id = aws_security_group.web_sg.id
    description              = "Allow Grafana from web app"
  }


  ingress {
    from_port                = 9200
    to_port                  = 9200
    protocol                 = "tcp"
    source_security_group_id = aws_security_group.web_sg.id
    description              = "Allow Elasticsearch from web app"
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]  
  }

  tags = {
    Name = "${var.project_name}-monitoring-sg"
  }
}

resource "aws_security_group_rule" "allow_node_exporter_scrape" {
  type                     = "ingress"
  from_port                = 9100
  to_port                  = 9100
  protocol                 = "tcp"
  security_group_id        = aws_security_group.web_sg.id
  source_security_group_id = aws_security_group.monitoring_sg.id
  description              = "Allow Prometheus to scrape Node Exporter metrics"
}
